--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   sqflite: ^2.3.0
   path: ^1.8.3
   intl: ^0.19.0
+  pdf: ^3.10.7
+  path_provider: ^2.1.1
+  printing: ^5.11.1
 
 dev_dependencies:
   flutter_test:
