--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   printing: ^5.11.1
   aws_client: ^0.7.1
   mailer: ^6.1.4
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
